# SectorETF-NLP-PortfolioOpt

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
01_data/: README.md  etfs_prices.ipynb  news_aux_gdelt_eda.ipynb  news_aux_llm_keywords.ipynb  news_collection.ipynb  reddit_collection.ipynb  reddit_manual_labeling.ipynb
01_data/aux/: 1M_TBills.csv  1M_TBills_full_history.csv  bid-ask_spread.json  non_tradable_days.txt
01_data/news/: TFIDF_10K.json  TFIDF_GICS.json  gics_word_labeling_0.parquet  gics_word_labeling_1.parquet  gics_word_labeling_2.parquet  gics_word_labeling_full.parquet  gics_word_labeling_summary.xlsx  subind_words-2.parquet  subind_words-3.parquet  subind_words.parquet  subind_words_count.json  subind_words_full.parquet
01_data/processed/: build_model_inputs.ipynb  reddit_0_SAMPLE.parquet  reddit_gpt_validation.json  reddit_gpt_validation_final.json  sector_gpt_api.json  sector_gpt_api_labeled_FINAL.json  sector_sentiment_quotations.json
01_data/reddit/: raw_eda.json  reddit_SAMPLE.parquet  reddit_label_eda.ipynb  stats.json
02_sentiment/: README.md
03_portfolio/: README.md  dataset.ipynb  dataset_features.txt
04_results/: README.md  results_pt1.ipynb  results_pt2.ipynb  results_pt3.ipynb
envs/: 01_gdelt_data.yml  01_reddit_data.yml  02_labeling.yml  02_sentiment_gdelt.yml  02_sentiment_reddit.yml  03_drl_ppo.yml  03_lstm.yml  03_mvo_capm.yml  03_portfolio_base.yml
src/: __init__.py  config.py  cv_report.py  data.py  metrics.py  plotting.py  secrets_example.py  seeds.py
thesis/: references.bib
(+1663 files in other folders)
