[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nlpfolio"
version = "1.0.0"
description = "Sentiment analysis of news and Reddit as features for portfolio optimization (MSc thesis)"
authors = [{ name = "Hugo Veríssimo" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "portfolio-optimization", "sentiment-analysis", "nlp",
    "reinforcement-learning", "finbert", "gdelt", "reddit", "etf",
]

[tool.setuptools]
packages = ["src"]
